src/objects/Information_Landscape__c.object
<CustomObject>
    <fields>
        <fullName>Authentication_Type__c</fullName>
        <label>Authentication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Health</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Consumer Health</fullName>
                </value>
                <value>
                    <fullName>Generics</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Division_Name__c</fullName>
        <label>Group Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Pre-Clinical</fullName>
                </value>
                <value>
                    <fullName>Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Regulatory Affairs</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Shared Services (IT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Sub_Division_Name__c</fullName>
        <label>Group Sub-Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Sub_Type__c</fullName>
        <label>Information Sub - Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Information_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Relational</fullName>
                </value>
                <value>
                    <fullName>Non-Relational</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>Sharepoint</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Dropbox</fullName>
                </value>
                <value>
                    <fullName>Sharefle</fullName>
                </value>
                <value>
                    <fullName>Documentum</fullName>
                </value>
                <value>
                    <fullName>Three Tier Client Server</fullName>
                </value>
                <value>
                    <fullName>Three Tier Web Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Type__c</fullName>
        <label>Information Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Mechanism__c</fullName>
        <label>Integration Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Licenses__c</fullName>
        <label>Number of Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Costs__c</fullName>
        <label>Operating Costs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low &lt; $50K/year</fullName>
                </value>
                <value>
                    <fullName>Medium &gt; $50K/year and &lt; $250K/year</fullName>
                </value>
                <value>
                    <fullName>High &gt; $250K/year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Information_Landscapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regulatory_Indicator__c</fullName>
        <label>Regulatory Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GLP</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>GMP</fullName>
                </value>
                <value>
                    <fullName>non-GxP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDLC_Classification__c</fullName>
        <label>SDLC Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Configurable</fullName>
                </value>
                <value>
                    <fullName>COTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitivity__c</fullName>
        <label>Sensitivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confidential</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Content__c</fullName>
        <label>Source Content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Structured</fullName>
                </value>
                <value>
                    <fullName>Semi-structured</fullName>
                </value>
                <value>
                    <fullName>Unstructured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Description__c</fullName>
        <label>Source Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDP_Information_Landscapes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Decommissioning_Indicator__c</fullName>
        <label>Target Decommissioning Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary__c</fullName>
        <label>Therapeutic Area (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autoimmune Diseases</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Gynecology</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry &amp; Pain</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Non-Therapeutic Area Specific</fullName>
                </value>
                <value>
                    <fullName>Critical Care</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Osteoporosis</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Information Source</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>System_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Information Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>